# personal-ai-assistant

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py  realtime_api_test.py  send_audio_realtime.py  test_audio_capture.py
